--- a/web/main.html
+++ b/web/main.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="csrf-token" content="{{ csrf }}">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tight Shorts</title>
     <link rel="stylesheet" href="../node_modules/bulma/css/bulma.min.css">
